--- a/static/css/common.css
+++ b/static/css/common.css
@@ -15,11 +15,11 @@ html {
     background-color:#222;
     color:#f9f9f9;
 }
-
+/*
 ::-webkit-scrollbar{
 	width:0px
 }
-
+*/
 body {
     max-width: 700px;
     padding: 0 20px;
