--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,1 @@
-<footer>Copyright ©2017 <a href="{{ site.home }}">{{ site.title }}</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a></footer>
+<footer>Copyright ©2016 <a href="{{ site.home }}">皖ICP备16016174号</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a></footer>
