--- a/static/css/articlelist.css
+++ b/static/css/articlelist.css
@@ -43,3 +43,21 @@
         display: none;
     }
 }
+
+#articlelist ul{
+	animation-duration: 1s;
+	animation-fill-mode: both;
+	animation-name: fadeInLeft;
+}
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
