--- a/static/css/common.css
+++ b/static/css/common.css
@@ -27,3 +27,29 @@ body {
     overflow-x: hidden;
 	/*overflow-wrap: break-word;*/
 }
+
+/*定义动画*/
+
+@keyframes fadeInLeft {
+  from {
+    opacity: 0;
+    transform: translate3d(-100%, 0, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    transform: none;
+  }
+}
