--- a/static/css/common.css
+++ b/static/css/common.css
@@ -53,3 +53,14 @@ body {
     transform: none;
   }
 }
+
+@keyframes fadeOutUp {
+	from {
+		opacity: 1;
+	}
+
+	to {
+		opacity: 0;
+		transform: translate3d(0, -350%, 0);
+	}
+}
