--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,5 @@
             <li><a href="{{ site.abouturl }}" class="nav-a">About</a></li>
         </ul>
     </nav>
-    <a class="menu-tool" id="menu-tool" href="javascript:void(0)"></a>
+	<span class="menu-tool" id="menu-tool"><em></em><em></em><em></em><em></em></span>
 </header>
