--- a/static/css/common.css
+++ b/static/css/common.css
@@ -10,6 +10,26 @@ html {
     min-height: 100%;
     color: #444;
 }
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+	background-color: transparent;
+}
+
+::-webkit-scrollbar-button{
+    display: none;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    -moz-border-radius: 4px;
+    -webkit-border-radius: 4px;
+    background-color: #999;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+}
 
 ::selection{
     background-color:#222;
