--- a/static/css/common.css
+++ b/static/css/common.css
@@ -10,6 +10,8 @@ html {
     min-height: 100%;
     color: #444;
 }
+
+/*滚动条样式*/
 ::-webkit-scrollbar {
     width: 8px;
     height: 8px;
@@ -21,9 +23,6 @@ html {
 }
 
 ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    -moz-border-radius: 4px;
-    -webkit-border-radius: 4px;
     background-color: #999;
 }
 
@@ -35,11 +34,7 @@ html {
     background-color:#222;
     color:#f9f9f9;
 }
-/*
-::-webkit-scrollbar{
-	width:0px
-}
-*/
+
 body {
     max-width: 700px;
     padding: 0 20px;
