--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,1 +1,15 @@
 <footer>Copyright ©2016 <a href="{{ site.beian }}">皖ICP备16016174号</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a></footer>
+<script>
+(function(){
+    var bp = document.createElement('script');
+    var curProtocol = window.location.protocol.split(':')[0];
+    if (curProtocol === 'https') {
+        bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
+    }
+    else {
+        bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+    }
+    var s = document.getElementsByTagName("script")[0];
+    s.parentNode.insertBefore(bp, s);
+})();
+</script>
