--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,14 +1,14 @@
 <header id="header">
-    <a class="logo" href="{{ site.home }}" title="Blog"></a>
-    <div class="title"><a href="{{ site.home }}" class="nav-a">{{ site.title }}</a></div>
+    <a class="logo" href="{{site.context}}/" title="Blog"></a>
+    <div class="title"><a href="{{site.context}}/" class="nav-a">{{ site.title }}</a></div>
     <nav class="nav" id="nav">
         <ul>
-            <li><a href="{{ site.home }}" class="nav-a">Blog</a><span>·</span></li>
-            <li><a href="{{ site.categoriesurl }}" class="nav-a">Categories</a><span>·</span></li>
-            <li><a href="{{ site.searchurl }}" class="nav-a">Search</a><span>·</span></li>
-            <li><a href="{{ site.linksurl }}" class="nav-a">Links</a><span>·</span></li>
-            <li><a href="{{ site.chaturl }}" class="nav-a">Chat</a><span>·</span></li>
-            <li><a href="{{ site.abouturl }}" class="nav-a">About</a></li>
+            <li><a href="{{site.context}}/" class="nav-a">Blog</a><span>·</span></li>
+            <li><a href="{{site.context}}/pages/categories.html" class="nav-a">Categories</a><span>·</span></li>
+            <li><a href="{{site.context}}/pages/search.html" class="nav-a">Search</a><span>·</span></li>
+            <li><a href="{{site.context}}/pages/links.html" class="nav-a">Links</a><span>·</span></li>
+            <li><a href="{{site.context}}/pages/chat.html" class="nav-a">Chat</a><span>·</span></li>
+            <li><a href="{{site.context}}/pages/about.html" class="nav-a">About</a></li>
         </ul>
     </nav>
 	<span class="menu-tool" id="menu-tool"><em></em><em></em><em></em><em></em></span>
