--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html baseurl="{{site.baseurl}}">
+<html context="{{site.context}}">
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
@@ -7,10 +7,10 @@
 		<meta name="keywords" content="{{ site.keywords }},{{ page.title }}"/>
 		<meta name="author" content="{{ site.author }}" />
 		<meta name="robots" content="all">
-		<link rel="stylesheet" href="{{site.cssurl}}/common.css">
-		<link rel="stylesheet" href="{{site.cssurl}}/syntax.css">
-		<link rel="stylesheet" href="{{site.cssurl}}/mypost.css">
-		<script type="text/javascript" src="{{site.jsurl}}/common.js"></script>
+		<link rel="stylesheet" href="{{site.context}}/static/css/common.css">
+		<link rel="stylesheet" href="{{site.context}}/static/css/syntax.css">
+		<link rel="stylesheet" href="{{site.context}}/static/css/mypost.css">
+		<script type="text/javascript" src="{{site.context}}/static/js/common.js"></script>
 		<title>{{ page.title }}</title>
 	</head>
 <body>
@@ -26,6 +26,5 @@
 		</div>
 	</div>
 {% include footer.html %}
-{% include totop.html %}
 </body>
 </html>
