--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -4,8 +4,9 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta http-equiv="content-language" content="zh-CN" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="keywords" content="{{ page.title }}"/>
+		<meta name="keywords" content="{{ site.author }},{% for category in page.categories %},{{ category }}{% endfor %}"/>
 		<meta name="author" content="{{ site.author }}" />
+		<meta name="description" content="{{ page.title }}"/>
 		<link rel="stylesheet" href="{{site.context}}/static/css/common.css">
 		<link rel="stylesheet" href="{{site.context}}/static/css/syntax.css">
 		<link rel="stylesheet" href="{{site.context}}/static/css/mypost.css">
