--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -7,6 +7,7 @@
 		<meta name="keywords" content="{{ site.author }}{% for category in page.categories %},{{ category }}{% endfor %}"/>
 		<meta name="author" content="{{ site.author }}" />
 		<meta name="description" content="{{ page.title }}"/>
+		<script type="text/javascript" src="http://tajs.qq.com/stats?sId=65068085" charset="UTF-8"></script>
 		<link rel="stylesheet" href="{{site.context}}/static/css/common.css">
 		<link rel="stylesheet" href="{{site.context}}/static/css/syntax.css">
 		<link rel="stylesheet" href="{{site.context}}/static/css/mypost.css">
