--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <a href="#" id="totop">Top</a>
-<footer>Copyright ©{{site.copyright}} {{ site.beianhao }} <a href="{{site.context}}/sitemap.xml">网站地图</a> Powered by <a href="http://jekyll.com.cn/">jekyll</a></footer>
+<footer>Copyright ©{{site.copyright}} {{ site.beianhao }} <a href="{{site.context}}/sitemap.xml">网站地图</a> Powered by <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a></footer>
 <script>
 //ta.qq.com不用了
 //mta.qq.com
