--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="{{site.context}}/static/css/syntax.css">
 		<link rel="stylesheet" href="{{site.context}}/static/css/mypost.css">
 		<script type="text/javascript" src="{{site.context}}/static/js/common.js"></script>
+		<link rel="icon" href="{{site.context}}/static/img/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="{{site.context}}/static/img/favicon.ico" type="image/x-icon"/>
 		<title>{{ page.title }}-{{ site.title }}</title>
 	</head>
 <body>
