--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,7 @@
 <a href="#" id="totop">Top</a>
 <footer>Copyright ©{{site.copyright}} {{ site.beianhao }} <a href="{{site.context}}/sitemap.xml">网站地图</a> Powered by <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a></footer>
 <script>
-//ta.qq.com不用了
-//mta.qq.com
+//mta.qq.com 访问统计
 var _mtac = {};
 (function() {
 	var mta = document.createElement("script");
