--- a/static/css/common.css
+++ b/static/css/common.css
@@ -35,6 +35,13 @@ html {
     color:#f9f9f9;
 }
 
+.no-select{
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 body {
     max-width: 700px;
     padding: 0 20px;
