--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <a href="#" id="totop">Top</a>
-<footer>Copyright ©{{site.copyright}} {{ site.beianhao }} <a href="{{site.context}}/sitemap.xml">网站地图</a> Powered by <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a></footer>
+<footer>Copyright ©{{site.copyright}} {{ site.record }} <a href="{{site.context}}/sitemap.xml">网站地图</a> Powered by <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a></footer>
 <script>
 //mta.qq.com 访问统计
 var _mtac = {};
@@ -24,9 +24,11 @@ var _mtac = {};
     var s = document.getElementsByTagName("script")[0];
     s.parentNode.insertBefore(bp, s);
 })();
-//360的自动推送
+//360的自动推送~
 (function(){
 var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281":"https://jspassport.ssl.qhimg.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281";
 document.write('<script src="' + src + '" id="sozz"><\/script>');
 })();
 </script>
+</body>
+</html>
