--- a/_请删除这个文件夹/theme-tmaize-blog/_includes/header.html
+++ b/_请删除这个文件夹/theme-tmaize-blog/_includes/header.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html context="${global.config.context}">
+<html>
 	<head>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta http-equiv="content-language" content="zh-CN" />
@@ -13,6 +13,7 @@
 				<link rel="stylesheet" href="${global.config.context}/static/css/${css}">
 			</#list>
 		</#if>
+		<script>window.blog={contextPath:"${global.config.context}"}</script>
 		<#if js_list??>
 			<#list js_list as js>
 				<script type="text/javascript" src="${global.config.context}/static/js/${js}"></script>
@@ -32,18 +33,16 @@
 		</#if>
 	</head>
 <body>
-	<header id="header">
-		<a class="logo" href="${global.config.context}/" title="Blog"></a>
-		<div class="title"><a href="${global.config.context}/" class="nav-a">${global.config.siteName}</a></div>
-		<nav class="nav" id="nav">
-			<ul>
-				<li><a href="${global.config.context}/" class="nav-a">Blog</a><span>·</span></li>
-				<li><a href="${global.config.context}/pages/categories.html" class="nav-a">Categories</a><span>·</span></li>
-				<li><a href="${global.config.context}/pages/search.html" class="nav-a">Search</a><span>·</span></li>
-				<li><a href="${global.config.context}/pages/links.html" class="nav-a">Links</a><span>·</span></li>
-				<li><a href="${global.config.context}/pages/chat.html" class="nav-a">Chat</a><span>·</span></li>
-				<li><a href="${global.config.context}/pages/about.html" class="nav-a">About</a></li>
-			</ul>
+	<header class="header select-none">
+		<a class="logo" title="${global.config.siteName}" href="${global.config.context}/"><img src="${global.config.context}/static/img/favicon.ico"></a>
+		<a class="title" href="${global.config.context}/">${global.config.siteName}</a>
+		<nav class="menu">
+			<a href="${global.config.context}/">Blog</a>
+			<a href="${global.config.context}/pages/categories.html">Categories</a>
+			<a href="${global.config.context}/pages/search.html">Search</a>
+			<a href="${global.config.context}/pages/links.html">Links</a>
+			<a href="${global.config.context}/pages/chat.html">Chat</a>
+			<a href="${global.config.context}/pages/about.html">About</a>
 		</nav>
-		<span class="menu-tool" id="menu-tool"><em></em><em></em><em></em><em></em></span>
+		<span class="icon"></span>
 	</header>
