--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,6 +4,7 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta http-equiv="content-language" content="zh-CN" />
 		<meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
+		<meta name="msvalidate.01" content="833A897D8FA12360B4CB76C5C3DA6638" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="description" content="{{ site.description }}"/>
 		<meta name="keywords" content="{{ site.keywords }}"/>
