--- a/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/header.html
+++ b/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/header.html
@@ -5,6 +5,7 @@
 		<meta http-equiv="content-language" content="zh-CN" />
 		<meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
 		<meta name="msvalidate.01" content="833A897D8FA12360B4CB76C5C3DA6638" />
+		<meta name="360-site-verification" content="2e30b4ad3bda2b54fe57f9c99a4205a2" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="author" content="${global.config.author}" />
 		<link rel="icon" href="${global.config.context}/static/img/favicon.ico" type="image/x-icon" />
