--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,6 +6,7 @@
 		<meta name="google-site-verification" content="ckhUaoa05QCmWoE1FafzTBcqYI4yBOy-UJKopXDS18M" />
 		<meta name="360-site-verification" content="2e30b4ad3bda2b54fe57f9c99a4205a2" />
 		<meta name="msvalidate.01" content="833A897D8FA12360B4CB76C5C3DA6638" />
+		<meta name="baidu-site-verification" content="CvuahQIPWP" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 		<meta name="description" content="{{ site.description }}"/>
 		<meta name="keywords" content="{{ site.keywords }}"/>
