--- a/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/header.html
+++ b/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/header.html
@@ -37,7 +37,7 @@
 	</head>
 <body>
 	<header class="header select-none">
-		<a class="logo" title="${global.config.siteName}" href="${global.config.context}/"><img src="${global.config.context}/static/img/favicon.ico"></a>
+		<a class="logo" title="${global.config.siteName}" href="${global.config.context}/"><img src="${global.config.context}/static/img/logo.jpg"></a>
 		<a class="title" href="${global.config.context}/">${global.config.siteName}</a>
 		<nav class="menu">
 			<a href="${global.config.context}/">Blog</a>
