--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,15 @@
-<header id="header">
-    <a class="logo" href="{{site.context}}/" title="Blog"></a>
-    <div class="title"><a href="{{site.context}}/" class="nav-a">{{ site.title }}</a></div>
-    <nav class="nav" id="nav">
-        <ul>
-            <li><a href="{{site.context}}/" class="nav-a">Blog</a><span>·</span></li>
-            <li><a href="{{site.context}}/pages/categories.html" class="nav-a">Categories</a><span>·</span></li>
-            <li><a href="{{site.context}}/pages/search.html" class="nav-a">Search</a><span>·</span></li>
-            <li><a href="{{site.context}}/pages/links.html" class="nav-a">Links</a><span>·</span></li>
-            <li><a href="{{site.context}}/pages/chat.html" class="nav-a">Chat</a><span>·</span></li>
-            <li><a href="{{site.context}}/pages/about.html" class="nav-a">About</a></li>
-        </ul>
+<header class="header select-none">
+    <a class="logo" title="{{site.title}}" href="{{site.context}}/">
+        <img src="{{site.context}}/static/img/logo.jpg">
+    </a>
+    <a class="title" href="{{site.context}}/">${global.config.siteName}</a>
+    <nav class="menu">
+        <a href="{{site.context}}/">Blog</a>
+        <a href="{{site.context}}/pages/categories.html">Categories</a>
+        <a href="{{site.context}}/pages/search.html">Search</a>
+        <a href="{{site.context}}/pages/links.html">Links</a>
+        <a href="{{site.context}}/pages/chat.html">Chat</a>
+        <a href="{{site.context}}/pages/about.html">About</a>
     </nav>
-	<span class="menu-tool" id="menu-tool"><em></em><em></em><em></em><em></em></span>
+    <span class="icon"></span>
 </header>
