--- a/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/static/css/blog.css
+++ b/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/static/css/blog.css
@@ -114,6 +114,10 @@ body>* {
     margin-bottom: 50px;
 }
 
+.header .logo{
+    text-decoration: none;
+}
+
 .header .title {
     display: none;
 }
