--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <a class="logo" title="{{site.title}}" href="{{site.context}}/">
         <img src="{{site.context}}/static/img/logo.jpg">
     </a>
-    <a class="title" href="{{site.context}}/">${global.config.siteName}</a>
+    <a class="title" href="{{site.context}}/">{{site.title}}</a>
     <nav class="menu">
         <a href="{{site.context}}/">Blog</a>
         <a href="{{site.context}}/pages/categories.html">Categories</a>
