--- a/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/footer.html
+++ b/__site-generator版本-使用jekyll请删除/theme-tmaize-blog/_includes/footer.html
@@ -2,7 +2,7 @@
         <span>Copyright © ${global.config.copyright} ${global.config.record}</span>
         <a href="${global.config.context}/sitemap.xml">网站地图</a>
         <span>Powered by</span>
-        <a href="https://github.com/TMaize/site-generator">site-generator</a>
+        <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
         <div class="up"></div>
     </footer>
     <script>
