sync,加载文章，缓存

--- a/__小程序/miniprogram/pages/index/index.wxml
+++ b/__小程序/miniprogram/pages/index/index.wxml
@@ -1,5 +1,5 @@
 <view class="container">
-    <view wx:for="{{articles}}" wx:key="{{index}}" data-index="{{index}}" class='list' bindtap="jumpDetail">
+    <view wx:for="{{articleList}}" wx:key="{{index}}" data-index="{{index}}" class='list' bindtap="jumpArticle">
         <text class='title'>{{item.title}}</text>
         <text class='time'>{{item.time}}</text>
     </view>
