--- a/__小程序/miniprogram/pages/detail/index.wxml
+++ b/__小程序/miniprogram/pages/detail/index.wxml
@@ -1,1 +1,2 @@
-<rich-text nodes="{{article}}"></rich-text>
+<!-- <rich-text nodes="{{article}}"></rich-text> -->
+<htmltowxml text="{{article}}" />
