--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -25,11 +25,12 @@
 	</div>
 
 	<!-- Gitalk start -->
-	<div id="gitalk-container"></div> <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
+	<div id="gitalk-container"></div>
+	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 	<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 	<script>
 	    var gitalk  = new Gitalk ({
-	        id: window.location.pathname,   // Ensure uniqueness and length less than 50
+	        id: {{ page.title }},   // Ensure uniqueness and length less than 50
 	        clientID: '{ {site.comment_gitalk_clientId} }',
 	        clientSecret: '{ {site.comment_gitalk_clientSecret} }',
 	        repo: '{ {site.comment_gitalk_repo} }',
@@ -40,5 +41,5 @@
 	    gitalk.render('gitalk-container')
 	</script>
 	<!-- Gitalk end -->
-	
+
 {% include footer.html %}
