--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -30,7 +30,7 @@
 	<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
 	<script>
 	    var gitalk  = new Gitalk ({
-	        id: {{ page.title }},   // Ensure uniqueness and length less than 50
+	        id: '{{ page.title}}',   // Ensure uniqueness and length less than 50
 	        clientID: '{ {site.comment_gitalk_clientId} }',
 	        clientSecret: '{ {site.comment_gitalk_clientSecret} }',
 	        repo: '{ {site.comment_gitalk_repo} }',
