--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -28,9 +28,10 @@
 	<div id="gitalk-container"></div>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.css">
 	<script src="https://cdn.jsdelivr.net/npm/gitalk@1/dist/gitalk.min.js"></script>
+	<script src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.js"></script>
 	<script>
 	    var gitalk  = new Gitalk ({
-	        id: '{{ page.title}}',   // Ensure uniqueness and length less than 50
+	        id: md5(window.location.pathname),   // Ensure uniqueness and length less than 50
 	        clientID: '{ {site.comment_gitalk_clientId} }',
 	        clientSecret: '{ {site.comment_gitalk_clientSecret} }',
 	        repo: '{ {site.comment_gitalk_repo} }',
