--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -32,11 +32,11 @@
 	<script>
 	    var gitalk  = new Gitalk ({
 	        id: md5(window.location.pathname),   // Ensure uniqueness and length less than 50
-	        clientID: '{ {site.comment_gitalk_clientId} }',
-	        clientSecret: '{ {site.comment_gitalk_clientSecret} }',
-	        repo: '{ {site.comment_gitalk_repo} }',
-	        owner: '{ {site.github_username} }',
-	        admin: ['{ {site.github_username} }'],
+	        clientID: { {site.comment_gitalk_clientId} }
+	        clientSecret: { {site.comment_gitalk_clientSecret} },
+	        repo: { {site.comment_gitalk_repo} },
+	        owner: { {site.github_username} },
+	        admin: [{ {site.github_username} }],
 			    distractionFreeMode: false  // Facebook-like distraction free mode
 	    })
 	    gitalk.render('gitalk-container')
