Error: Not Found.

--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -32,7 +32,7 @@
 	<script>
 	    var gitalk  = new Gitalk ({
 	        id: md5(window.location.pathname),   // Ensure uniqueness and length less than 50
-	        clientID: 'cd9e988dce5113b6026b'
+	        clientID: 'cd9e988dce5113b6026b',
 	        clientSecret: 'f90642dc6b14c8236e0058744a18759c739f0a6e',
 	        repo: 'https://www.zhangchangbao.com',
 	        owner: 'changboa66',
