--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -34,7 +34,7 @@
 	        id: md5(window.location.pathname),   // Ensure uniqueness and length less than 50
 	        clientID: 'cd9e988dce5113b6026b',
 	        clientSecret: 'f90642dc6b14c8236e0058744a18759c739f0a6e',
-	        repo: 'https://www.zhangchangbao.com',
+	        repo: 'changboa66.github.io',
 	        owner: 'changboa66',
 	        admin: 'changboa66',
 			    distractionFreeMode: false  // Facebook-like distraction free mode
