gitalk参数提到_config里，添加comment.rb脚本生成issue

--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -31,12 +31,15 @@
 	<script src="//cdn.bootcss.com/blueimp-md5/2.10.0/js/md5.js"></script>
 	<script>
 	    var gitalk  = new Gitalk ({
-	        id: md5(window.location.pathname),   // Ensure uniqueness and length less than 50
-	        clientID: 'cd9e988dce5113b6026b',
-	        clientSecret: 'f90642dc6b14c8236e0058744a18759c739f0a6e',
-	        repo: 'changboa66.github.io',
-	        owner: 'changboa66',
-	        admin: 'changboa66',
+					// md5将路径名加密，确保id小于50个字符，
+					// id必须与github-pages-comments的label一致，才能将blog与comment关联
+					// comment.rb为生成Gitalk的issue的脚本，对log的路径也做了md5加密
+	        id: md5(window.location.pathname),
+	        clientID: {{gitalk.comment_gitalk_clientId}},
+	        clientSecret: {{gitalk.comment_gitalk_clientSecret}},
+	        repo: {{gitalk.blog_repo}},
+	        owner: {{gitalk.github_username}},
+	        admin: {{gitalk.github_username}},
 			    distractionFreeMode: false  // Facebook-like distraction free mode
 	    })
 	    gitalk.render('gitalk-container')
