clientID, clientSecret等变量的值加单引号

--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -35,11 +35,11 @@
 					// id必须与github-pages-comments的label一致，才能将blog与comment关联
 					// comment.rb为生成Gitalk的issue的脚本，对log的路径也做了md5加密
 	        id: md5(window.location.pathname),
-	        clientID: {{site.gitalk.comment_gitalk_clientId}},
-	        clientSecret: {{site.gitalk.comment_gitalk_clientSecret}},
-	        repo: {{site.gitalk.blog_repo}},
-	        owner: {{site.gitalk.github_username}},
-	        admin: {{site.gitalk.github_username}},
+	        clientID: '{{site.gitalk.comment_gitalk_clientId}}',
+	        clientSecret: '{{site.gitalk.comment_gitalk_clientSecret}}',
+	        repo: '{{site.gitalk.blog_repo}}',
+	        owner: '{{site.gitalk.github_username}}',
+	        admin: '{{site.gitalk.github_username}}',
 			    distractionFreeMode: false  // Facebook-like distraction free mode
 	    })
 	    gitalk.render('gitalk-container')
