--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
     var _mtac = {};
     (function() {
         var mta = document.createElement("script");
-        mta.src = "http://pingjs.qq.com/h5/stats.js?v2.0.2";
+        mta.src = "https://pingjs.qq.com/h5/stats.js?v2.0.2";
         mta.setAttribute("name", "MTAH5");
         mta.setAttribute("sid", "500581966");
         var s = document.getElementsByTagName("script")[0];
@@ -18,7 +18,7 @@
     })();
     //360的自动推送
     (function(){
-        var src = (document.location.protocol == "http:") ? "http://js.passport.qihucdn.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281":"https://jspassport.ssl.qhimg.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281";
+        var src = (document.location.protocol == "http:") ? "https://js.passport.qihucdn.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281":"https://jspassport.ssl.qhimg.com/11.0.1.js?0b7f3f19682121293c3e4b62c9740281";
         document.write('<script src="' + src + '" id="sozz"><\/script>');
     })();
     //百度的自动推送
@@ -29,7 +29,7 @@
             bp.src = 'https://zz.bdstatic.com/linksubmit/push.js';
         }
         else {
-            bp.src = 'http://push.zhanzhang.baidu.com/push.js';
+            bp.src = 'https://push.zhanzhang.baidu.com/push.js';
         }
         var s = document.getElementsByTagName("script")[0];
         s.parentNode.insertBefore(bp, s);
