--- a/_layouts/mypost.html
+++ b/_layouts/mypost.html
@@ -7,20 +7,21 @@
 		<meta name="keywords" content="{{ site.author }}{% for category in page.categories %},{{ category }}{% endfor %}"/>
 		<meta name="author" content="{{ site.author }}" />
 		<meta name="description" content="{{ page.title }}"/>
-		<link rel="icon" href="{{site.context}}/static/img/favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="{{site.context}}/static/img/favicon.ico" type="image/x-icon"/>
-		<link rel="stylesheet" href="{{site.context}}/static/css/blog.css">
-		<link rel="stylesheet" href="{{site.context}}/static/css/blog-post.css">
-		<script>window.blog={contextPath:""}</script>
-		<script type="text/javascript" src="{{site.context}}/static/js/blog.js"></script>
+		<link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
+		<link rel="shortcut icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon"/>
+		<link rel="stylesheet" href="{{site.baseUrl}}/static/css/blog.css">
+		<link rel="stylesheet" href="{{site.baseUrl}}/static/css/blog-post.css">
 		<title>{{ page.title }}-{{ site.title }}</title>
 	</head>
 <body>
 {% include header.html %}
-	<div class="main animation-fadeUp post">
-		{% if page.title %}
-		<h1 class="title">{{ page.title }}</h1>
-		{% endif %}
-		<div class="content">{{ content }}</div>
-	</div>
+<div class="main animation-fadeUp post">
+{% if page.title %}
+<h1 class="title">{{ page.title }}</h1>
+{% endif %}
+<div class="content">{{ content }}</div>
+</div>
 {% include footer.html %}
+{% include footer-script.html %}
+</body>
+</html>
