--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -1,295 +1,221 @@
-html, body {
-    padding: 0;
-    margin: 0;
-}
-
+html,
 body {
-    font-family: Helvetica, Tahoma, Arial, "PingFang SC", "Hiragino Sans GB", "Heiti SC", "Microsoft YaHei", "WenQuanYi Micro Hei";
-    font-size: 15px;
-    line-height: 1.8;
-    color: #313131;
-    background-color: #FFFFFF;
+  padding: 0;
+  margin: 0;
+  font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei',
+    'Hiragino Sans GB', 'PingFang SC', 'WenQuanYi Micro Hei', sans-serif;
+  background: #ffffff;
 }
-
-/* 
-   -webkit-scrollbar隐藏滚动条
-   手机：前置条件是高度固定，PC随意
-   使用此属性，window上的scroll事件就无法监听到了
-   通过监听body的滚动时可以，但是scrollTop始终是0
-*/
-
-::-webkit-scrollbar {
-    width: 4px;
-    height: 4px;
-    background-color: transparent;
+ul,
+li {
+  list-style: none;
 }
-
-::-webkit-scrollbar-button {
-    display: none;
+input,
+select,
+textarea {
+  font-family: inherit;
+  border-radius: 0;
+  appearance: none;
+  -webkit-appearance: none;
 }
-
-::-webkit-scrollbar-thumb {
-    background-color: #999;
-}
-
-::-webkit-scrollbar-track {
-    background-color: transparent;
-}
-
-::selection {
-    background-color: #444;
-    color: #f9f9f9;
-}
-
-@keyframes fadeUp {
-    from {
-        opacity: 0;
-        transform: translateY(36px);
-    }
-    to {
-        opacity: 1;
-        transform: none;
-    }
-}
-
-@keyframes fadeOutUp {
-    from {
-        opacity: 1;
-    }
-    to {
-        opacity: 0;
-        transform: translate3d(0, -350%, 0);
-    }
-}
-
-/*文字冒泡*/
-
-.bubble {
-    z-index: 999;
-    padding: 0 !important;
-    color: #313131;
-    font-size: 12px;
-    position: absolute;
-    animation-duration: 1s;
-    animation-fill-mode: both;
-    animation-name: fadeOutUp;
-}
-
-.hide {
-    display: none !important;
-}
-
-.select-none {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-}
-
-.animation-fadeUp {
-    animation-timing-function: ease;
-    animation-duration: 800ms;
-    animation-fill-mode: both;
-    animation-name: fadeUp;
-}
-
 a {
-    color: #313131;
-    text-decoration: underline;
+  text-decoration: none;
+  color: #313131;
 }
-
-ul, li {
-    margin: 0;
-    padding: 0;
-    list-style: none;
+* {
+  font-size: 14px;
+  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  color: #313131;
+  -webkit-tap-highlight-color: transparent;
+  font-weight: normal;
 }
-
-body>* {
-    max-width: 580px;
-    margin: 0 auto;
-    padding: 0 23px;
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  background-color: transparent;
 }
-
+::-webkit-scrollbar-thumb {
+  background-color: #999;
+}
+::selection {
+  background-color: #4a4a4a;
+  color: #f9f9f9;
+}
+body::-webkit-scrollbar {
+  display: none;
+}
+.select-none {
+  user-select: none;
+  -webkit-user-select: none;
+}
+.hover-underline {
+  position: relative;
+}
+.hover-underline:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
+  visibility: hidden;
+  transform: scaleX(0);
+  -webkit-transform: scaleX(0);
+  transition: transform 200ms ease-in-out;
+  -webkit-transition: transform 200ms ease-in-out;
+}
+.hover-underline:hover:after {
+  visibility: visible;
+  transform: scaleX(1);
+  -webkit-transform: scaleX(1);
+}
+.container {
+  width: 100%;
+  margin: 0 auto;
+  max-width: 560px;
+}
 .header {
-    margin-top: 40px;
-    margin-bottom: 50px;
+  margin-top: 40px;
+  margin-bottom: 50px;
 }
-
-.header .logo{
-    text-decoration: none;
+.header .logo {
+  display: inline-block;
+  vertical-align: middle;
 }
-
+.header .logo > img {
+  width: 42px;
+  height: 42px;
+  border-radius: 50%;
+  box-shadow: 0 1px 5px rgba(0, 0, 0, 0.1);
+  transition: transform 500ms linear;
+  -webkit-transition: transform 500ms linear;
+}
+.header .logo:hover img {
+  transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
+}
 .header .title {
-    display: none;
+  display: inline-block;
+  vertical-align: middle;
+  display: none;
 }
-
-.header .logo>img {
-    width: 35px;
-    height: 35px;
-    border-radius: 50%;
-    box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-    vertical-align: bottom;
-}
-
 .header .menu {
-    display: inline-block;
-    vertical-align: middle;
+  display: inline-block;
+  font-size: 0;
 }
-
 .header .menu a {
-    line-height: 35px;
-    margin-left: 24px;
-    position: relative;
+  font-size: 16px;
+  display: inline-block;
+  margin: 0 12px;
+  position: relative;
 }
-
-.header .menu a:after {
-    /* 中文特殊字符 */
-    content: '·';
-    padding-left: 12px;
-    /* position: absolute;防止出现下划线 */
-    position: absolute;
-    font-weight: bold;
+.header .menu a:before {
+  content: '';
+  display: inline-block;
+  width: 3px;
+  height: 3px;
+  background-color: #313131;
+  position: absolute;
+  left: -13.5px;
+  top: 6.5px;
 }
-
-.header .menu a:last-child:after {
-    display: none;
+.header .menu a:first-child {
+  margin-left: 24px;
 }
-
-.list-group>span {
-    color: #ccc;
-    font-size: 16px;
+.header .menu a:last-child {
+  margin-right: 0;
 }
-
-.list-group>ul {
-    padding-left: 40px;
-    margin-top: 15px;
-    margin-bottom: 15px;
+.header .menu a:first-child:before {
+  display: none;
 }
-
+.header .menu-togger {
+  display: none;
+}
+.footer {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  font-size: 0;
+}
+.footer > * {
+  font-size: 14px;
+  margin: 0 4px;
+  position: relative;
+}
+.footer > *:first-child {
+  margin-left: 0;
+}
+.footer > *:last-child {
+  margin-right: 0;
+}
+.footer a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
+}
+.page-title {
+  font-size: 20px;
+  padding-bottom: 15px;
+}
+.list-group {
+  padding-bottom: 15px;
+}
+.list-group > h2 {
+  font-size: 15px;
+  font-weight: bold;
+  padding-bottom: 15px;
+}
 .list-group li {
-    list-style: disc;
-    line-height: 35px;
+  padding: 10px 0;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
-
-.list-group .time {
-    color: #666;
+.list-group li .date {
+  padding: 0 8px 0 16px;
+  color: #666666;
+  font-size: 15px;
+  vertical-align: middle;
 }
-
-.list-group .categories a {
-    text-decoration: none;
-    color: #666;
-    padding-left: 8px;
+.list-group li .title {
+  font-size: 15px;
+  vertical-align: middle;
 }
-
-body>.footer {
-    margin-top: 30px;
+.list-group li .categorie {
+  font-size: 12px;
+  color: #666666;
+  vertical-align: middle;
+  margin-left: 8px;
 }
-
-.footer .up {
-    position: fixed;
-    right: 20px;
-    bottom: -40px;
-    width: 30px;
-    height: 30px;
-    background: #E8E6E6;
-    transition: all 500ms ease 0ms;
+.page-categories > ul {
+  border-bottom: 2px solid #f5f5f5;
+  padding-bottom: 10px;
+  margin-bottom: 15px;
+  font-size: 0;
+  word-break: break-all;
 }
-
-.footer .up.show {
-    bottom: 20px;
+.page-categories > ul li {
+  display: inline-block;
+  padding: 5px 12px 5px 0;
 }
-
-.footer .up:after {
-    position: absolute;
-    top: 8px;
-    left: 7px;
-    content: '';
-    border-right: 8px solid #E8E6E6;
-    border-bottom: 13px solid #949393;
-    border-left: 8px solid #E8E6E6;
+.page-categories > ul li a {
+  display: inline;
+  font-size: 15px;
+  position: relative;
 }
-
-@media screen and (max-width: 600px) {
-    body {
-        font-size: 13px;
-        padding-top: 55px;
-    }
-    body>* {
-        width: auto;
-    }
-    .header {
-        position: fixed;
-        z-index: 999;
-        margin: 0;
-        top: 0;
-        left: 0;
-        right: 0;
-        background-color: white;
-        height: 45px;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-    }
-    .header .logo {
-        display: none;
-    }
-    .header .menu {
-        position: fixed;
-        top: 53px;
-        right: -200px;
-        z-index: 99;
-        background-color: white;
-        box-shadow: 0 1px 5px rgba(0, 0, 0, .1);
-        overflow: hidden;
-        min-width: 100px;
-        height: auto;
-        transition: all 500ms ease 0ms;
-    }
-    .header .menu.show {
-        right: 20px;
-    }
-    .header .menu a {
-        display: block;
-        text-align: center;
-        white-space: nowrap;
-        line-height: 30px;
-        text-decoration: none;
-        padding: 0;
-        margin: 0;
-    }
-    .header .menu a:hover {
-        background-color: #EEE;
-    }
-    .header .menu a:after {
-        display: none;
-    }
-    .header .title {
-        display: inline-block;
-        line-height: 45px;
-        font-size: 15px;
-        text-decoration: none;
-    }
-    .header .icon {
-        width: 20px;
-        height: 2px;
-        border-top: 2px solid #ccc;
-        border-bottom: 2px solid #ccc;
-        background-color: #ccc;
-        padding: 5px 0;
-        background-clip: content-box;
-        float: right;
-        margin-top: 13px;
-    }
-    .list-group>ul {
-        padding-left: 35px;
-        margin-top: 10px;
-        margin-bottom: 10px;
-    }
-    .list-group>span {
-        font-size: 15px;
-    }
-    .list-group li {
-        line-height: 30px;
-    }
-    .list-group .time.md, .list-group .categories.md {
-        display: none;
-    }
+.page-categories > ul li a:after {
+  content: '';
+  position: absolute;
+  width: 100%;
+  height: 1px;
+  bottom: 0;
+  left: 0;
+  background-color: #313131;
 }
