--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,23 +1,12 @@
+{%- assign pageCSS = page.css -%}
+{%- assign pageJS = page.js -%}
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
-		<meta http-equiv="content-language" content="zh-CN" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-		<meta name="description" content="{{ site.description }}"/>
-		<meta name="keywords" content="{{ site.keywords }}"/>
-		<meta name="author" content="{{ site.author }}" />
-		{% for css in page.css %}
-		<link rel="stylesheet" href="{{site.baseUrl}}/static/css/{{ css }}">
-		{% endfor %}
-		<link rel="icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon" />
-		<link rel="shortcut icon" href="{{site.baseUrl}}/static/img/favicon.ico" type="image/x-icon"/>
-		<title>{% if page.title %}{{ page.title }}-{{ site.title }} {% else %}{{ site.title }}{% endif %}</title>
-	</head>
+{% include head.html %}
 <body ondragstart="return false;">
 {% include header.html %}
 {{ content }}
 {% include footer.html %}
-{% include footer-script.html %}
+{% include script.html %}
 </body>
 </html>
