--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -3,5 +3,5 @@
   <a href="{{ site.baseUrl }}/sitemap.xml">网站地图</a>
   <span>Theme By</span>
   <a href="https://github.com/TMaize/tmaize-blog">tmaize-blog</a>
-  <div class="up"></div>
+  <div id="moveUp"></div>
 </footer>
