--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,5 @@
 <header class="container header select-none">
-  <a class="logo" title="{{ site.title }}" href="{{ site.baseUrl }}/">
-    <img src="{{ site.baseUrl }}/static/img/logo.jpg" />
-  </a>
+  <img class="logo" src="{{ site.baseUrl }}/static/img/logo.jpg" />
   <a class="title" href="{{ site.baseUrl }}/">{{ site.title }}</a>
   <nav class="menu">
     <a href="{{ site.baseUrl }}/" class="hover-underline">Blog</a>
