--- a/static/css/blog.css
+++ b/static/css/blog.css
@@ -5,6 +5,7 @@ body {
   font-family: 'Helvetica Neue', Helvetica, Arial, 'Microsoft Yahei',
     'Hiragino Sans GB', 'PingFang SC', 'WenQuanYi Micro Hei', sans-serif;
   background: #ffffff;
+  scroll-behavior: smooth;
 }
 ul,
 li {
@@ -88,8 +89,6 @@ body::-webkit-scrollbar {
 .header .logo {
   display: inline-block;
   vertical-align: middle;
-}
-.header .logo > img {
   width: 42px;
   height: 42px;
   border-radius: 50%;
@@ -97,7 +96,7 @@ body::-webkit-scrollbar {
   transition: transform 500ms linear;
   -webkit-transition: transform 500ms linear;
 }
-.header .logo:hover img {
+.header .logo:hover {
   transform: rotateY(180deg);
   -webkit-transform: rotateY(180deg);
 }
@@ -139,8 +138,8 @@ body::-webkit-scrollbar {
   display: none;
 }
 .footer {
-  margin-top: 5px;
-  margin-bottom: 5px;
+  margin-top: 20px;
+  margin-bottom: 4px;
   font-size: 0;
 }
 .footer > * {
@@ -163,17 +162,37 @@ body::-webkit-scrollbar {
   left: 0;
   background-color: #313131;
 }
+.footer #moveUp {
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  width: 30px;
+  height: 30px;
+  cursor: pointer;
+  background: #e8e6e6;
+  transition: bottom 500ms ease-in-out 0ms;
+  -webkit-transition: bottom 500ms ease-in-out 0ms;
+}
+.footer #moveUp::after {
+  position: absolute;
+  top: 8px;
+  left: 7px;
+  content: '';
+  border-right: 8px solid #e8e6e6;
+  border-bottom: 13px solid #949393;
+  border-left: 8px solid #e8e6e6;
+}
 .page-title {
   font-size: 20px;
-  padding-bottom: 15px;
+  margin: 14px 0;
 }
 .list-group {
-  padding-bottom: 15px;
+  margin-bottom: 14px;
 }
 .list-group > h2 {
   font-size: 15px;
   font-weight: bold;
-  padding-bottom: 15px;
+  margin: 14px 0;
 }
 .list-group li {
   padding: 10px 0;
@@ -198,9 +217,7 @@ body::-webkit-scrollbar {
   margin-left: 8px;
 }
 .page-categories > ul {
-  border-bottom: 2px solid #f5f5f5;
-  padding-bottom: 10px;
-  margin-bottom: 15px;
+  margin: 14px 0;
   font-size: 0;
   word-break: break-all;
 }
@@ -226,8 +243,8 @@ body::-webkit-scrollbar {
   display: block;
   width: 100%;
   text-align: center;
-  margin: 10px 0 30px 0;
   padding: 0 0 10px 0;
+  margin-bottom: 28px;
   border-bottom: 2px solid #eeeeee;
 }
 .page-chat form {
@@ -269,8 +286,8 @@ body::-webkit-scrollbar {
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.2);
 }
 .page-chat .page-chat-load-container {
-  padding-top: 18px;
-  padding-bottom: 13px;
+  margin-top: 18px;
+  margin-bottom: 14px;
   text-align: center;
 }
 .page-chat .page-chat-load {
